<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ru.hh.public-pom</groupId>
        <artifactId>public-pom</artifactId>
        <version>2.1.1.boot-3.5-alpha4</version>
    </parent>

    <groupId>ru.hh.nab</groupId>
    <artifactId>nuts-and-bolts-parent</artifactId>
    <packaging>pom</packaging>
    <version>20.0.0.boot-3.5-alpha1-SNAPSHOT</version>

    <name>nuts'n'bolts parent module</name>

    <modules>
        <module>nab-common</module>
        <module>nab-web</module>
        <module>nab-data-source</module>
        <module>nab-jpa</module>
        <module>nab-hibernate</module>
        <module>nab-testbase</module>
        <module>nab-logging</module>
        <module>nab-jclient</module>
        <module>nab-metrics</module>
        <module>nab-telemetry</module>
        <module>nab-telemetry-jdbc</module>
        <module>nab-telemetry-kafka</module>
        <module>nab-kafka</module>
        <module>nab-sentry</module>
        <module>nab-consul</module>
    </modules>

    <properties>
        <jclient.version>14.0.0.boot-3.5-alpha1</jclient.version>
        <java.version>17</java.version>
        <consul.client.version>2.0.1.boot-3.5-alpha1</consul.client.version>
        <kafka-test-utils.version>1.0.2.boot-3.5-alpha1</kafka-test-utils.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-data-source</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-jpa</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-hibernate</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-testbase</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-logging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-jclient</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-metrics</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-telemetry</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-telemetry-kafka</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-telemetry-jdbc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-kafka</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-sentry</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ru.hh.nab</groupId>
                <artifactId>nab-consul</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.hh.consul</groupId>
                <artifactId>consul-client</artifactId>
                <version>${consul.client.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.13.1</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>syslog4j</artifactId>
                <version>0.9.46</version>
            </dependency>

            <dependency>
                <groupId>ru.hh.errors</groupId>
                <artifactId>errors-common</artifactId>
                <version>1.0.0</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.microprofile.openapi</groupId>
                <artifactId>microprofile-openapi-api</artifactId>
                <version>3.1.1</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <!-- need only for test purposes -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>codecoverage</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
                <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
                <sonar.projectKey>${project.groupId}:${project.artifactId}</sonar.projectKey>
                <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
                <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
                <sonar.junit.reportPaths>${project.build.directory}/surefire-reports</sonar.junit.reportPaths>
                <sonar.coverage.exclusions>**/*Test.java</sonar.coverage.exclusions>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>@{argLine}</argLine>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>ru/hh/**/*Test.class</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>hh-public</id>
            <name>hh public releases repository</name>
            <url>https://m2.hh.ru/content/repositories/public-releases</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:git@github.com:hhru/nuts-and-bolts.git</connection>
        <developerConnection>scm:git:git@github.com:hhru/nuts-and-bolts.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
</project>
